--- a/package.json
+++ b/package.json
@@ -25,31 +25,10 @@
   "engines": {
     "node": ">=16.0.0"
   },
-  "dependencies": {
-    "vasu-playwright-utils": "^0.1.0",
-    "@playwright/test": "^1.37.1",
-    "dotenv": "^16.3.1",
-    "winston": "^3.10.0"
-  },
   "devDependencies": {
-    "@types/node": "^20.5.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
+    "vasu-playwright-utils": "^0.4.4",
     "allure-commandline": "^2.23.1",
-    "allure-playwright": "^2.5.0",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jsdoc": "^46.4.6",
-    "eslint-plugin-playwright": "^0.15.3",
-    "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
-    "prettier": "^3.0.2",
-    "rimraf": "^5.0.1",
-    "tslib": "^2.6.2",
-    "typescript": "5.1.6"
+    "allure-playwright": "^2.5.0"
   },
   "scripts": {
     "clean": "rimraf dist",
@@ -68,7 +47,7 @@
     "lint:fix": "eslint 'tests/**/*.ts' 'src/**/*.ts' 'playwright.config.ts' --fix",
     "prepare": "husky install",
     "format": "prettier --write 'tests/**/*.ts' 'src/**/*.ts' 'playwright.config.ts' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
-    "postinstall": "playwright install"
+    "postinstall": "playwright install && npm run build"
   },
   "husky": {
     "hooks": {
