--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
-    "allure-commandline": "^2.23.1",
-    "allure-playwright": "^2.6.0",
-    "vasu-playwright-utils": "^0.5.0"
+    "vasu-playwright-utils": "^0.5.1"
   },
   "scripts": {
     "clean": "rimraf dist",
@@ -47,7 +45,7 @@
     "lint": "eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts'",
     "lint:fix": "eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' --fix",
     "prepare": "husky install",
-    "format": "prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
+    "format": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
     "postinstall": "playwright install && npm run build"
   },
   "husky": {
