--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
-    "vasu-playwright-utils": "^0.5.1"
+    "vasu-playwright-utils": "latest"
   },
   "scripts": {
     "clean": "rimraf dist",
