Updated all the ignore files and commented out the JSDoc lint Rules

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,17 @@
 node_modules/
 test-results/
 playwright-report/
+playwright/.cache/
+playwright/.auth/
 .husky/
-**/*.js
+.env
+.vscode
+.idea
+.DS_Store
+allure*
+dist
+
 package-lock.json
-dist/**/*
+**/*.sh
+**/*.png
+*.md
