Updated the vasu-playwright-utils to 0.6.3 version with latest dependencies

--- a/.eslintrc
+++ b/.eslintrc
@@ -55,8 +55,8 @@
     "complexity": ["warn", { "max": 11 }],
 
     // JSDoc Rules
-    // "jsdoc/check-alignment": "warn",
-    // "jsdoc/check-indentation": "warn",
+    "jsdoc/check-alignment": "warn",
+    "jsdoc/check-indentation": "warn",
 
     // Playwright Rules
     "playwright/missing-playwright-await": ["error"],
