--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "istanbul": "^0.4.5",
+    "nyc": "^15.1.0",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
     "vasu-playwright-utils": "^0.7.0"
   },
   "scripts": {
@@ -46,7 +51,9 @@
     "lint:fix": "eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' --fix",
     "prepare": "husky install",
     "format": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
-    "postinstall": "playwright install && npm run build"
+    "postinstall": "playwright install && npm run build",
+    "nyc": "nyc",
+    "coverage": "nyc npm run test"
   },
   "husky": {
     "hooks": {
