deleted scripts for nyc

--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
     "lint:fix": "eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' --fix",
     "prepare": "husky install",
     "format": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
-    "postinstall": "playwright install && npm run build",
-    "nyc": "nyc",
-    "coverage": "nyc npm run test"
+    "postinstall": "playwright install && npm run build"
   },
   "husky": {
     "hooks": {
