--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test": "playwright test",
     "test:chromium": "playwright test --retries 0 --project=chromiumheadless",
     "test:chromium-headed": "playwright test -j 1 --retries 0 --headed --project=chromium",
+    "local": "playwright test -j 1 --retries 0 --headed --project=chromium",
     "test:reg": "playwright test --project=chromiumheadless -g '@reg'",
     "test:smoke": "playwright test --project=chromiumheadless -g '@smoke'",
     "report": "playwright show-report playwright-report",
