adding cross-env to lint-staged commands to work in winwdos OS

--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
   },
   "lint-staged": {
     "*.{json,md,ts}": [
-      "prettier --write"
+      "cross-env prettier --write"
     ],
-    "*.{ts}": "eslint --fix"
+    "*.{ts}": "cross-env eslint --fix"
   }
 }
