--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "paths": {
       "@pages/*": ["./tests/pages/*"],
       "@testdata/*": ["./tests/testdata/*"],
-      "@pagesetup": ["test-setup/page-setup"]
+      "@pagesetup": ["test-setup/page-setup"],
     }, // Sets up custom path mappings, enabling to import modules with convenient shorter paths
 
     // Emit
@@ -40,8 +40,8 @@
     "strictFunctionTypes": true, // Enforces checking of function types, particularly related to contravariant parameter types
 
     // Completeness
-    "skipLibCheck": true // Skips the type checking of '.d.ts' files for faster compilation times
+    "skipLibCheck": true, // Skips the type checking of '.d.ts' files for faster compilation times
   },
   "include": ["test-setup/**/*.ts", "tests/**/*.ts", "playwright.config.ts"],
-  "exclude": ["node_modules"] // Node_modules are excluded by default, but explicitly specified here for further exclusions as needed in your project
+  "exclude": ["node_modules"], // Node_modules are excluded by default, but explicitly specified here for further exclusions as needed in your project
 }
