Removed the build command as the playwright handles the typescript conversion internally

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' --fix",
     "prepare": "husky install",
     "format": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
-    "postinstall": "playwright install && npm run build && npm run format"
+    "postinstall": "playwright install"
   },
   "husky": {
     "hooks": {
