Update .eslintrc with .eslintrc.js file and corresponding configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,6 @@
     // Completeness
     "skipLibCheck": true // Skips the type checking of '.d.ts' files for faster compilation times
   },
-  "include": ["test-setup/**/*.ts", "tests/**/*.ts", "playwright.config.ts"],
+  "include": ["test-setup/**/*.ts", "tests/**/*.ts", "playwright.config.ts", ".eslintrc.js"],
   "exclude": ["node_modules"] // Node_modules are excluded by default, but explicitly specified here for further exclusions as needed in your project
 }
