--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "trailingComma": "all",
   "overrides": [
     {
-      "files": ["*.json", ".eslintrc"],
+      "files": ["*.json"],
       "options": {
         "trailingComma": "none"
       }
