--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "report": "playwright show-report playwright-report",
     "ui": "playwright test --project=chromiumheadless --ui-port 0",
     "trace": "playwright show-trace --port 0",
+    "record": "playwright codegen",
     "allure": "allure generate ./allure-results --clean && allure open ./allure-report",
-    "lint": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts'",
-    "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' --fix",
-    "format": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
+    "lint": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js'",
+    "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js' --fix",
+    "format": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
     "prepare": "husky",
     "postinstall": "playwright install"
   },
@@ -56,9 +57,10 @@
     }
   },
   "lint-staged": {
-    "*.{json,md,ts}": [
+    "*.{json,md}": "cross-env prettier --write",
+    "{*.ts,.eslintrc.js}": [
+      "cross-env eslint --fix",
       "cross-env prettier --write"
-    ],
-    "*.{ts}": "cross-env eslint --fix"
+    ]
   }
 }
