--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,13 @@
     "resolveJsonModule": true, // Allows importing JSON files and accessing the data through 'import'
     "paths": {
       "@pages/*": [
-        "./tests/sauce-demo-project-with-classes/pages/*",
-        "./tests/sauce-demo-project-with-functions/pages/*"
+        "tests/sauce-demo-project-with-classes/pages/*",
+        "examples/sauce-demo-tests-using-functions/pages/*"
       ],
-      "@testdata/*": ["./tests/testdata/*"],
-      "@pagesetup": ["./test-setup/page-setup"],
-      "@fixturesetup": ["tests/sauce-demo-project-with-classes/fixtures/testFixtures"]
+      "@testdata/*": ["tests/testdata/*"],
+      "@fixturesetup": ["tests/sauce-demo-project-with-classes/fixtures/testFixtures"],
+      "@pagesetup": ["test-setup/page-setup"],
+      "@playwright-config": ["playwright.config"]
     }, // Sets up custom path mappings, enabling to import modules with convenient shorter paths
 
     // Emit
@@ -46,6 +47,6 @@
     // Completeness
     "skipLibCheck": true // Skips the type checking of '.d.ts' files for faster compilation times
   },
-  "include": ["test-setup/**/*.ts", "tests/**/*.ts", "playwright.config.ts", ".eslintrc.js"],
+  "include": ["test-setup/**/*.ts", "tests/**/*.ts", "playwright.config.ts", ".eslintrc.js", "examples/**/*.ts"],
   "exclude": ["node_modules"] // Node_modules are excluded by default, but explicitly specified here for further exclusions as needed in your project
 }
