Adding rerun, repeat, and change scripts

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "local": "playwright test -j 1 --retries 0 --headed --project=chromium",
     "test:reg": "playwright test --project=chromiumheadless --grep-invert '@fail'",
     "test:smoke": "playwright test --project=chromiumheadless -g '@smoke'",
+    "rerun": "playwright test -j 1 --retries 0 --headed --project=chromium --last-failed",
+    "change": "playwright test -j 1 --retries 0 --headed --project=chromium --only-changed",
+    "repeat": "playwright test -j 1 --retries 0 --headed --project=chromium --repeat-each",
     "report": "playwright show-report playwright-report",
     "ui": "playwright test --project=chromiumheadless --ui-port 0",
     "trace": "playwright show-trace --port 0",
